--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -133,18 +133,27 @@
         {{ project.full_description|safe }}
         <hr>
       {% else %}
-        {# 0: Database #}
-        {% if project.resource_type.id == 0 %}
-          {% include "project/database_content.html" %}
-        {# 1: Software #}
-        {% elif project.resource_type.id == 1 %}
-          {% include "project/software_content.html" %}
-        {# 2: Challenge #}
-        {% elif project.resource_type.id == 2 %}
-          {% include "project/challenge_content.html" %}
-        {# 3: Model #}
-        {% elif project.resource_type.id == 3 %}
-          {% include "project/model_content.html" %}
+        <h2 id="abstract">Abstract</h2>
+        {{ project.abstract|safe }}
+        <hr>
+        {% for c in content|dictsort:"project_section.default_order" %}
+          <h2 id='{{ c.project_section.name|slugify }}'>{{ c.project_section.name }}</h2>
+          {{ c.content|safe }}
+          <hr>
+        {% endfor %}
+        {% if project.release_notes %}
+          <h2>Release Notes</h2>
+          {{ project.release_notes|safe }}
+          <hr>
+        {% endif %}
+        {% if references %}
+          <h2 id="references">References</h2>
+          <ol>
+          {% for reference in references %}
+            <li style="word-break: break-all;">{{ reference.description }}</li>
+          {% endfor %}
+          </ol>
+          <hr>
         {% endif %}
       {% endif %}
     </div>
@@ -159,49 +168,17 @@
           Contents
         </button>
         <div class="dropdown-menu">
-          {% if project.resource_type.id == 0 %}
-            <a class="dropdown-item" href="#abstract">Abstract</a>
-            <a class="dropdown-item" href="#background">Background</a>
-            <a class="dropdown-item" href="#methods">Methods</a>
-            <a class="dropdown-item" href="#description">Data Description</a>
-            <a class="dropdown-item" href="#usage-notes">Usage Notes</a>
-            <a class="dropdown-item" href="#acknowledgements">Acknowledgements</a>
-            <a class="dropdown-item" href="#conflicts-of-interest">Conflicts of Interest</a>
-            <a class="dropdown-item" href="#references">References</a>
-            <a class="dropdown-item" href="#files">Files</a>
-          {% elif project.resource_type.id == 1 %}
-            <a class="dropdown-item" href="#abstract">Abstract</a>
-            <a class="dropdown-item" href="#background">Background</a>
-            <a class="dropdown-item" href="#description">Software Description</a>
-            {% if project.methods %}
-              <a class="dropdown-item" href="#implementation">Technical Implementation</a>
-            {% endif %}
-            {% if project.installation %}
-              <a class="dropdown-item" href="#installation">Installation and Requirements</a>
-            {% endif %}
-            <a class="dropdown-item" href="#usage-notes">Usage Notes</a>
-            {% if project.release_notes %}
-              <a class="dropdown-item" href="#release-notes">Release Notes</a>
-            {% endif %}
-            {% if project.acknowledgements %}
-              <a class="dropdown-item" href="#acknowledgements">Acknowledgements</a>
-            {% endif %}
-            <a class="dropdown-item" href="#conflicts-of-interest">Conflicts of Interest</a>
-            <a class="dropdown-item" href="#references">References</a>
-            <a class="dropdown-item" href="#files">Files</a>
-          {% elif project.resource_type.id == 2 %}
-            <a class="dropdown-item" href="#abstract">Abstract</a>
-            <a class="dropdown-item" href="#objective">Objective</a>
-            <a class="dropdown-item" href="#participation">Participation</a>
-            <a class="dropdown-item" href="#description">Data Description</a>
-            <a class="dropdown-item" href="#evaluation">Evaluation</a>
-            <a class="dropdown-item" href="#acknowledgements">Acknowledgements</a>
-            <a class="dropdown-item" href="#conflicts-of-interest">Conflicts of Interest</a>
-            <a class="dropdown-item" href="#references">References</a>
-            <a class="dropdown-item" href="#files">Files</a>
-          {% else %}
-            <a class="dropdown-item" href="#files">Files</a>
+          <a class="dropdown-item" href="#abstract">Abstract</a>
+          {% for c in content|dictsort:"project_section.default_order" %}
+            <a class="dropdown-item" href="#{{ c.project_section.name|slugify }}">{{ c.project_section.name }}</a>
+          {% endfor %}
+          {% if project.release_notes %}
+            <a class="dropdown-item" href="#release-notes">Release Notes</a>
           {% endif %}
+          {% if references %}
+            <a class="dropdown-item" href="#references">References</a>
+          {% endif %}
+          <a class="dropdown-item" href="#files">Files</a>
         </div>
       </div>
       {% endif %}
