--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -142,7 +142,7 @@
           <hr>
         {% endfor %}
         {% if project.release_notes %}
-          <h2>Release Notes</h2>
+          <h2 id="release-notes">Release Notes</h2>
           {{ project.release_notes|safe }}
           <hr>
         {% endif %}
