--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -136,9 +136,9 @@
         <h2 id="abstract">Abstract</h2>
         {{ project.abstract|safe }}
         <hr>
-        {% for c in project.content.all|dictsort:"project_section.default_order" %}
+        {% for c in project.project_content.all|dictsort:"project_section.default_order" %}
           <h2 id='{{ c.project_section.name|slugify }}'>{{ c.project_section.name }}</h2>
-          {{ c.content|safe }}
+          {{ c.section_content|safe }}
           <hr>
         {% endfor %}
         {% if project.release_notes %}
@@ -169,7 +169,7 @@
         </button>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#abstract">Abstract</a>
-          {% for c in project.content.all|dictsort:"project_section.default_order" %}
+          {% for c in project.project_content.all|dictsort:"project_section.default_order" %}
             <a class="dropdown-item" href="#{{ c.project_section.name|slugify }}">{{ c.project_section.name }}</a>
           {% endfor %}
           {% if project.release_notes %}
