--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -137,7 +137,7 @@
         {{ project.abstract|safe }}
         <hr>
         {% for c in project.project_content.all|dictsort:"project_section.default_order" %}
-          <h2 id='{{ c.project_section.name|slugify }}'>{{ c.project_section.name }}</h2>
+          <h2 id='{{ c.project_section.html_id }}'>{{ c.project_section.title }}</h2>
           {{ c.section_content|safe }}
           <hr>
         {% endfor %}
@@ -150,7 +150,7 @@
           <h2 id="references">References</h2>
           <ol>
           {% for reference in references %}
-            <li style="word-break: break-all;">{{ reference.description }}</li>
+            <li>{{ reference.description }}</li>
           {% endfor %}
           </ol>
           <hr>
@@ -170,7 +170,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#abstract">Abstract</a>
           {% for c in project.project_content.all|dictsort:"project_section.default_order" %}
-            <a class="dropdown-item" href="#{{ c.project_section.name|slugify }}">{{ c.project_section.name }}</a>
+            <a class="dropdown-item" href="#{{ c.project_section.html_id }}">{{ c.project_section.title }}</a>
           {% endfor %}
           {% if project.release_notes %}
             <a class="dropdown-item" href="#release-notes">Release Notes</a>
