--- a/physionet-django/console/templates/console/console_navbar.html
+++ b/physionet-django/console/templates/console/console_navbar.html
@@ -59,7 +59,7 @@
 
       <!-- credentialing -->
       <li class="nav-item" data-toggle="tooltip" data-placement="right">
-      {% if credentials_nav or complete_credentials_nav or past_credentials_nav or known_ref_nav or processing_credentials_nav %}
+      {% if credentials_nav or complete_credentials_nav or past_credentials_nav or known_ref_nav or known_instr_nav or processing_credentials_nav %}
         <a id="nav_credentialing_dropdown" class="nav-link nav-link-collapse drop" data-toggle="collapse" href="#credentialComponents" data-parent="#sideAccordion" aria-expanded="true">
       {% else %}
         <a id="nav_credentialing_dropdown" class="nav-link nav-link-collapse drop collapsed" data-toggle="collapse" href="#credentialComponents" data-parent="#sideAccordion" aria-expanded="false">
@@ -68,7 +68,7 @@
           <span class="nav-link-text">Credentialing</span>
         </a>
         <!-- submenu -->
-      {% if credentials_nav or complete_credentials_nav or past_credentials_nav or known_ref_nav or processing_credentials_nav %}
+      {% if credentials_nav or complete_credentials_nav or past_credentials_nav or known_ref_nav or known_instr_nav or processing_credentials_nav %}
         <ul class="sidenav-second-level collapse show" id="credentialComponents">
       {% else %}
         <ul class="sidenav-second-level collapse" id="credentialComponents">
@@ -84,6 +84,9 @@
           </li>
           <li class="nav-item {% if known_ref_nav %}active{% endif %} ">
             <a id="nav_known_ref" href="{% url 'known_references' %}">Known References</a>
+          </li>
+          <li class="nav-item {% if known_instr_nav %}active{% endif %} ">
+            <a id="nav_known_instr" href="{% url 'known_instructors' %}">Known Instructors</a>
           </li>
         </ul>
       </li>
