--- a/physionet-django/static/custom/css/physionet.css
+++ b/physionet-django/static/custom/css/physionet.css
@@ -454,7 +454,7 @@ a{
 }
 
 /* project files form */
-.big-toolbar-left, .big-toolbar-right {
+.big-toolbar-left, .big-toolbar-center, .big-toolbar-right {
   display: block;
   text-align: center;
 }
@@ -469,6 +469,9 @@ a{
 @media only screen and (min-width: 992px) {
   .big-toolbar-left {
     float: left;
+  }
+  .big-toolbar-center {
+    float: center;
   }
   .big-toolbar-right {
     float: right;
