Adds sorting to credential processing tables

--- a/physionet-django/console/templates/console/credential_processing.html
+++ b/physionet-django/console/templates/console/credential_processing.html
@@ -1,8 +1,15 @@
 {% extends "console/base_console.html" %}
 
+{% load static %}
+
 {% block title %}Credential Processing{% endblock %}
 
 {% load console_templatetags %}
+
+
+{% block local_js_top %}
+<script src="{% static 'custom/js/sort-table.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -35,16 +42,15 @@
       <div class="tab-pane fade show active" id="initial" role="tabpanel" aria-labelledby="initial-tab">
         {% if initial_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="initialt">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'initialt')">User <i class="fas fa-sort" id="icon_0_initialt"></i></th>
+                <th onclick="sortTable(1,'initialt')">Full Name <i class="fas fa-sort" id="icon_1_initialt"></i></th>
+                <th onclick="sortTable(2,'initialt')">Email <i class="fas fa-sort" id="icon_2_initialt"></i></th>
+                <th onclick="sortTable(3,'initialt')">Reference Email <i class="fas fa-sort" id="icon_3_initialt"></i></th>
                 <th>Application</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(5,'initialt')">Time Elapsed <i class="fas fa-sort" id="icon_5_initialt"></i></th>
                 <th class="table-process">Process Application</th>
               </tr>
             </thead>
@@ -52,7 +58,6 @@
             {% for application in initial_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'user_management' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
@@ -82,16 +87,15 @@
       <div class="tab-pane fade" id="training" role="tabpanel" aria-labelledby="training-tab">
         {% if training_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="trainingt">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'trainingt')">User <i class="fas fa-sort" id="icon_0_trainingt"></i></th>
+                <th onclick="sortTable(1,'trainingt')">Full Name <i class="fas fa-sort" id="icon_1_trainingt"></i></th>
+                <th onclick="sortTable(2,'trainingt')">Email <i class="fas fa-sort" id="icon_2_trainingt"></i></th>
+                <th onclick="sortTable(3,'trainingt')">Reference Email <i class="fas fa-sort" id="icon_3_trainingt"></i></th>
                 <th>Application</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(5,'trainingt')">Time Elapsed <i class="fas fa-sort" id="icon_5_trainingt"></i></th>
                 <th>Reset Application</th>
                 <th class="table-process">Process Application</th>
               </tr>
@@ -100,7 +104,6 @@
             {% for application in training_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'public_profile' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
@@ -136,16 +139,15 @@
       <div class="tab-pane fade" id="personal" role="tabpanel" aria-labelledby="personal-tab">
         {% if personal_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="personalt">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'personalt')">User <i class="fas fa-sort" id="icon_0_personalt"></i></th>
+                <th onclick="sortTable(1,'personalt')">Full Name <i class="fas fa-sort" id="icon_1_personalt"></i></th>
+                <th onclick="sortTable(2,'personalt')">Email <i class="fas fa-sort" id="icon_2_personalt"></i></th>
+                <th onclick="sortTable(3,'personalt')">Reference Email <i class="fas fa-sort" id="icon_3_personalt"></i></th>
                 <th>Application</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(5,'personalt')">Time Elapsed <i class="fas fa-sort" id="icon_5_personalt"></i></th>
                 <th>Reset Application</th>
                 <th class="table-process">Process Application</th>
               </tr>
@@ -154,7 +156,6 @@
             {% for application in personal_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'public_profile' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
@@ -190,16 +191,15 @@
       <div class="tab-pane fade" id="reference" role="tabpanel" aria-labelledby="reference-tab">
         {% if reference_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="referencet">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'referencet')">User <i class="fas fa-sort" id="icon_0_referencet"></i></th>
+                <th onclick="sortTable(1,'referencet')">Full Name <i class="fas fa-sort" id="icon_1_referencet"></i></th>
+                <th onclick="sortTable(2,'referencet')">Email <i class="fas fa-sort" id="icon_2_referencet"></i></th>
+                <th onclick="sortTable(3,'referencet')">Reference Email <i class="fas fa-sort" id="icon_3_referencet"></i></th>
                 <th>Application</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(5,'referencet')">Time Elapsed <i class="fas fa-sort" id="icon_5_referencet"></i></th>
                 <th>Reset Application</th>
                 <th class="table-process">Process Application</th>
               </tr>
@@ -208,7 +208,6 @@
             {% for application in reference_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'public_profile' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
@@ -244,18 +243,17 @@
       <div class="tab-pane fade" id="response" role="tabpanel" aria-labelledby="response-tab">
         {% if response_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="responset">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'responset')">User <i class="fas fa-sort" id="icon_0_responset"></i></th>
+                <th onclick="sortTable(1,'responset')">Full Name <i class="fas fa-sort" id="icon_1_responset"></i></th>
+                <th onclick="sortTable(2,'responset')">Email <i class="fas fa-sort" id="icon_2_responset"></i></th>
+                <th onclick="sortTable(3,'responset')">Reference Email <i class="fas fa-sort" id="icon_3_responset"></i></th>
                 <th>Application</th>
                 <th>Reference Contact</th>
                 <th>Reference Verification</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(7,'responset')">Time Elapsed <i class="fas fa-sort" id="icon_7_responset"></i></th>
                 <th class="table-process">Process Application</th>
               </tr>
             </thead>
@@ -263,7 +261,6 @@
             {% for application in response_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'public_profile' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
@@ -295,18 +292,17 @@
       <div class="tab-pane fade" id="final" role="tabpanel" aria-labelledby="final-tab">
         {% if final_applications %}
         <div class="table-responsive">
-          <table class="table table-bordered table-cred">
+          <table class="table table-bordered table-cred" id="finalt">
             <thead>
               <tr class="header">
-                <th class="table-index">#</th>
-                <th class="table-user">User</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Reference Email</th>
+                <th class="table-user" onclick="sortTable(0,'finalt')">User <i class="fas fa-sort" id="icon_0_finalt"></i></th>
+                <th onclick="sortTable(1,'finalt')">Full Name <i class="fas fa-sort" id="icon_1_finalt"></i></th>
+                <th onclick="sortTable(2,'finalt')">Email <i class="fas fa-sort" id="icon_2_finalt"></i></th>
+                <th onclick="sortTable(3,'finalt')">Reference Email <i class="fas fa-sort" id="icon_3_finalt"></i></th>
                 <th>Application</th>
                 <th>Reference Contact</th>
                 <th>Reference Verification</th>
-                <th class="table-elapsed">Time Elapsed</th>
+                <th class="table-elapsed" onclick="sortTable(7,'finalt')">Time Elapsed <i class="fas fa-sort" id="icon_7_finalt"></i></th>
                 <th class="table-process">Process Application</th>
               </tr>
             </thead>
@@ -314,7 +310,6 @@
             {% for application in final_applications %}
               <tr class="header" id='application_{{application.user.email}}'>
               {% with user=application.user %}
-                <td>{{forloop.counter}}</td>
                 <td><a href="{% url 'public_profile' user.username %}">{{ user }}</td>
                 <td>{{ user.get_full_name }}</td>
                 <td>{{ user.email }}</td>
