Update workflow for GKE

--- a/physionet-django/templates/home.html
+++ b/physionet-django/templates/home.html
@@ -32,7 +32,7 @@ PhysioNet
 
   <div class="main-header">
     <div class="center">
-      <h1>PhysioNet</h1>
+      <h1>PhysioNetTestWow</h1>
       <p>
         The Research Resource for Complex Physiologic Signals
       </p>
