Remove lightwave urls for GCP storage type.

--- a/physionet-django/project/templates/project/project_preview.html
+++ b/physionet-django/project/templates/project/project_preview.html
@@ -245,8 +245,10 @@
     <!-- /.sidebar -->
   </div>
   <h2>Files</h2>
-  {% if project.has_wfdb %}
-    <p><a href="{% url 'lightwave_project_home' project.slug %}?db={{ project.slug }}"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
+  {% if storage_type != 'GCP' %}
+    {% if project.has_wfdb %}
+      <p><a href="{% url 'lightwave_project_home' project.slug %}?db={{ project.slug }}"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
+    {% endif %}
   {% endif %}
   <div id="files-panel" class="card">
     {% include "project/files_panel.html" %}
