--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -399,9 +399,10 @@
         </ul>
 {# ZIP END #}
       </p>
-      {% if project.has_wfdb %}
-
-        <p><a href="{% url 'lightwave_home' %}?db={{ project.slug }}/{{ project.version }}"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
+      {% if storage_type != 'GCP' %}
+        {% if project.has_wfdb %}
+          <p><a href="{% url 'lightwave_home' %}?db={{ project.slug }}/{{ project.version }}"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
+        {% endif %}
       {% endif %}
       <div id="files-panel" class="card">
         {% include "project/files_panel.html" %}
