--- a/physionet-django/project/templates/project/project_files.html
+++ b/physionet-django/project/templates/project/project_files.html
@@ -97,7 +97,7 @@
   </div>
 </div>
 <br>
-{% if storage_type != 'GCP' %}
+{% if storage_type == 'local' %}
   {% if project.has_wfdb %}
     <p><a href="{% url 'lightwave_project_home' project.slug %}?db={{ project.slug }}" target="_blank"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
   {% endif %}
