--- a/physionet-django/templates/about/software_content.html
+++ b/physionet-django/templates/about/software_content.html
@@ -1,7 +1,7 @@
 <section id="overview">
     <h2>Overview</h2>
   <p>This page displays an alphabetical list of all software projects on PhysioNet. To search content on PhysioNet, <a href="{% url 'content_index' %}?types=1">visit the search page</a>. Enter the search terms, add a filter for resource type if needed, and select how you would like the results to be ordered (for example, by relevance, by date, or by title).</p>
-  {% if storage_type != 'GCP' %}
+  {% if storage_type == 'local' %}
     <p>Many of the time series datasets on PhysioNet (for example, ECGs) are shared in waveform-database (WFDB) compatible file formats.  For more information on these formats, see the <a href="/physiotools/wag" />WFDB Applications Guide</a>. WFDB-formatted datasets can also be viewed online with <a href="{% url 'lightwave_home' %}">LightWAVE</a>.</p>
   {% endif %}
 </section>
