--- a/physionet-django/project/templates/project/project_preview.html
+++ b/physionet-django/project/templates/project/project_preview.html
@@ -245,7 +245,7 @@
     <!-- /.sidebar -->
   </div>
   <h2>Files</h2>
-  {% if storage_type == 'local' %}
+  {% if is_lightwave_supported %}
     {% if project.has_wfdb %}
       <p><a href="{% url 'lightwave_project_home' project.slug %}?db={{ project.slug }}"><i class="fas fa-chart-line"></i> Visualize waveforms</a></p>
     {% endif %}
