Add research environments app.

--- a/physionet-django/project/templates/project/published_project.html
+++ b/physionet-django/project/templates/project/published_project.html
@@ -407,9 +407,11 @@
       <div id="files-panel" class="card">
         {% include "project/files_panel.html" %}
       </div>
+      {% endif %}
     {% endif %}
-  {% endif %}
-  <br>
+    <br>
+    <button type="button" class="btn btn-sm btn-secondary float-right">Go to research environments console</button>
+    <br>
 </div>
 
 {% endblock %}
