Base billing setup flow without verification

--- a/physionet-django/environment/templates/environment/identity_provisioning.html
+++ b/physionet-django/environment/templates/environment/identity_provisioning.html
@@ -4,7 +4,7 @@
 
 {% load project_templatetags %}
 
-{% block title %}Create Identity{% endblock %}
+{% block title %}Create Cloud Identity{% endblock %}
 
 {% block local_css %}
 <link rel="stylesheet" type="text/css" href="{% static 'project/css/project-home.css' %}">
@@ -22,13 +22,15 @@
       You don't have any research environments yet.
     </p>
     <p>
-      To start, click the button below to provide you Google Cloud Identity
+      To start, click the button below to provide you Google Cloud Identity.
     </p>
 
-      <form action="{% url 'identity_provisioning' %}" method="post">
-          {% csrf_token %}
-          <button class="btn btn-primary" type="submit">Create Identity</button>
-      </form>
+    <form action="{% url 'identity_provisioning' %}" method="post">
+      {% csrf_token %}
+      <button class="btn btn-sm btn-primary" type="submit">
+        Create Cloud Identity
+      </button>
+    </form>
   </div>
-</div> <!-- /container -->
+</div>
 {% endblock %}
