Add default value for missing OTP in environment app

--- a/physionet-django/environment/templates/environment/billing_setup.html
+++ b/physionet-django/environment/templates/environment/billing_setup.html
@@ -32,7 +32,7 @@
               E-Mail: {{ email }}
             </div>
             <div>
-              One Time Password: {{ otp }}
+              One Time Password: {{ otp|default_if_none:"--" }}
             </div>
           </div>
         </div>
