--- a/physionet-django/environment/templates/environment/create_research_environment.html
+++ b/physionet-django/environment/templates/environment/create_research_environment.html
@@ -21,7 +21,7 @@
         Project: {{ project.title }}
     </h3>
 
-    <form action="{% url 'billing_setup' %}" method="post" style="width: 24rem;">
+    <form action="{% url 'create_research_environment' project_slug=project.slug %}" method="post" style="width: 24rem;">
     {% csrf_token %}
     {{ form }}
     <button class="btn btn-sm btn-primary mt-3" type="submit">
