--- a/physionet-django/environment/templates/environment/identity_provisioning.html
+++ b/physionet-django/environment/templates/environment/identity_provisioning.html
@@ -6,6 +6,10 @@
 
 {% block title %}Create Cloud Identity{% endblock %}
 
+{% block local_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'environment/css/environment-base.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
   {% include "message_snippet.html" %}
