--- a/physionet-django/environment/templates/environment/_available_projects_list.html
+++ b/physionet-django/environment/templates/environment/_available_projects_list.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-4 text-right">
             {% if environment is None %}
-                <a class="btn btn-sm btn-primary" href="">
+                <a class="btn btn-sm btn-primary" href="{% url 'create_research_environment' %}">
                     Launch Research Environment
                 </a>
             {% else %}
