--- a/physionet-django/environment/templates/environment/research_environments.html
+++ b/physionet-django/environment/templates/environment/research_environments.html
@@ -10,6 +10,10 @@
 <link rel="stylesheet" type="text/css" href="{% static 'environment/css/environment-base.css' %}">
 {% endblock %}
 
+{% block local_js_top %}
+<script src="{% static 'custom/js/cookie.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="container">
   {% include "message_snippet.html" %}
