Add persistent_disk field to CreateEnvironmentForm

--- a/physionet-django/environment/templates/environment/create_research_environment.html
+++ b/physionet-django/environment/templates/environment/create_research_environment.html
@@ -30,3 +30,21 @@
     </form>
 </div>
 {% endblock %}
+
+{% block local_js_bottom %}
+<script>
+  (function() {
+    const jupyterTypeRadioButton = document.querySelector("#id_environment_type input[value='jupyter']");
+    const rstudioTypeRadioButton = document.querySelector("#id_environment_type input[value='rstudio']");
+    const persistentDiskInput = document.getElementById("id_persistent_disk");
+
+    persistentDiskInput.disabled = !jupyterTypeRadioButton.checked;
+    jupyterTypeRadioButton.addEventListener("change", function() {
+      persistentDiskInput.disabled = false;
+    });
+    rstudioTypeRadioButton.addEventListener("change", function() {
+      persistentDiskInput.disabled = true;
+    });
+  })();
+</script>
+{% endblock %}
