Full-outer join projects and environments instead of inner joining

--- a/physionet-django/environment/templates/environment/_available_environments_list.html
+++ b/physionet-django/environment/templates/environment/_available_environments_list.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </li>    
-    {% for environment, project in environment_project_pairs %}
+    {% for project, environment in project_environment_pairs %}
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-3">
