--- a/physionet-django/environment/templates/environment/_available_projects_list.html
+++ b/physionet-django/environment/templates/environment/_available_projects_list.html
@@ -14,25 +14,27 @@
         </div>
     </li>    
     {% for project, environment in project_environment_pairs %}
-    <li class="list-group-item">
-        <div class="row">
-            <div class="col-md-8">
-                <strong>
-                    {{ project }}
-                </strong>
-            </div>
-            <div class="col-md-4 text-right">
-            {% if environment is None %}
-                <a class="btn btn-sm btn-primary" href="{% url 'create_research_environment' project_slug=project.slug project_version=project.version %}">
-                    Launch Research Environment
-                </a>
-            {% else %}
-                <button class="btn btn-sm btn-secondary disabled">
-                    Environment Already Running
-                </button>
-            {% endif %}
-            </div>
-        </div>
-    </li>
+        {% if project is not None %}
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-md-8">
+                        <strong>
+                            {{ project }}
+                        </strong>
+                    </div>
+                    <div class="col-md-4 text-right">
+                    {% if environment is None %}
+                        <a class="btn btn-sm btn-primary" href="{% url 'create_research_environment' project_slug=project.slug project_version=project.version %}">
+                            Launch Research Environment
+                        </a>
+                    {% else %}
+                        <button class="btn btn-sm btn-secondary disabled">
+                            Environment Already Running
+                        </button>
+                    {% endif %}
+                    </div>
+                </div>
+            </li>
+        {% endif %}
     {% endfor %}
 </ul>
