--- a/physionet-django/environment/templates/environment/billing_setup.html
+++ b/physionet-django/environment/templates/environment/billing_setup.html
@@ -13,59 +13,54 @@
 {% block content %}
 <div class="container">
   {% include "message_snippet.html" %}
-  <div>
-    <h1 class="mb-5">
+    <h2 class="mb-4">
       Research Environments
-    </h1>
-
-    <div class="mb-5">
-      <p>
-        Your Cloud Identity was successfully created.
-      </p>
-      <div class="card" style="width: 24rem;">
-        <h6 class="card-header p-2">
-          Credentials
-        </h6>
-        <div class="p-2">
-          <div class="card-text">
-            <div>
-              E-Mail: {{ email }}
-            </div>
-            <div>
-              One Time Password: {{ otp|default_if_none:"--" }}
+    </h2>
+    <div class="card" style="width: 36rem;">
+      <div class="card-body">
+          <h5 class="card-title">
+            Your Cloud Identity was successfully created.
+          </h5>
+          <div class="card" style="width: 24rem;">
+            <h6 class="card-header p-2">
+              Credentials
+            </h6>
+            <div class="p-2">
+              <div class="card-text">
+                <div>
+                  E-Mail: {{ email }}
+                </div>
+                <div>
+                  One Time Password: {{ otp|default_if_none:"--" }}
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+          <br>
+          <h6 class="card-title font-weight-bold">
+            You need to set up your billing account before creating your first research environment.
+          </h6>
+          <span >In order to do that:</span>
+          <ol>
+            <li>
+                <span class="font-italic">Visit <a href="https://console.cloud.google.com/billing">the Google Cloud Platform console</a> and follow the instructions there.</span>
+            </li>
+            <li>
+                <span class="font-italic">Copy the created billing account's ID.</span>
+            </li>
+            <li>
+                <span class="font-italic">Paste the ID in the form below and submit.</span>
+            </li>
+          </ol>
+
+          <form action="{% url 'billing_setup' %}" method="post" style="width: 24rem;">
+            {% csrf_token %}
+            {{ form }}
+            <button class="btn btn-primary mt-3 " type="submit">
+              Setup Billing Account
+            </button>
+          </form>
       </div>
     </div>
-
-    <div>
-      <p>
-        You need to set up your billing account before creating your first research environment.
-      </p>
-      <div>
-        In order to do that:
-        <ol>
-          <li>
-            Visit <a href="https://console.cloud.google.com/billing">the Google Cloud Platform console</a> and follow the instructions there.
-          </li>
-          <li>
-            Copy the created billing account's ID.
-          </li>
-          <li>
-            Paste the ID in the form below and submit.
-          </li>
-        </ol>
-      </div>
-
-      <form action="{% url 'billing_setup' %}" method="post" style="width: 24rem;">
-        {% csrf_token %}
-        {{ form }}
-        <button class="btn btn-sm btn-primary mt-3" type="submit">
-          Setup Billing Account
-        </button>
-      </form>
-    </div>
-  </div>
 </div>
 {% endblock %}
