--- a/physionet-django/environment/templates/environment/create_research_environment.html
+++ b/physionet-django/environment/templates/environment/create_research_environment.html
@@ -13,21 +13,24 @@
 {% block content %}
 <div class="container">
   {% include "message_snippet.html" %}
-    <h1 class="mb-5">
+    <h1 class="mb-4">
       Create Research Environment
     </h1>
+    <div class="card" style="width: 36rem;">
+      <div class="card-body">
+        <h3 class="card-title mb-3">
+            Project: <span class="font-italic">{{ project.title }}</span>
+        </h3>
 
-    <h3>
-        Project: {{ project.title }}
-    </h3>
-
-    <form action="{% url 'create_research_environment' project_slug=project.slug project_version=project.version %}" method="post" style="width: 24rem;">
-    {% csrf_token %}
-    {{ form }}
-    <button class="btn btn-sm btn-primary mt-3" type="submit">
-        Create environment
-    </button>
-    </form>
+        <form action="{% url 'create_research_environment' project_slug=project.slug project_version=project.version %}" method="post" style="width: 24rem;">
+            {% csrf_token %}
+            {{ form }}
+            <button class="btn btn-primary mt-3" type="submit">
+                Create environment
+            </button>
+        </form>
+      </div>
+    </div>
 </div>
 {% endblock %}
 
@@ -41,6 +44,7 @@
     persistentDiskInput.disabled = !jupyterTypeRadioButton.checked;
     jupyterTypeRadioButton.addEventListener("change", function() {
       persistentDiskInput.disabled = false;
+      persistentDiskInput.value = null;
     });
     rstudioTypeRadioButton.addEventListener("change", function() {
       persistentDiskInput.disabled = true;
