Match environments with projects based on data access

--- a/physionet-django/environment/templates/environment/_available_environments_list.html
+++ b/physionet-django/environment/templates/environment/_available_environments_list.html
@@ -47,7 +47,7 @@
                     {% if environment.is_running or environment.is_paused %}
                         <div class="d-flex flex-wrap justify-content-start align-content-around">
                             {% if environment.is_running %}
-                                <a href="//{{ environment.url }}">
+                                <a href="{{ environment.url }}" target="_blank">
                                     <button type="button" class="btn btn-sm btn-link m-1">Open</button>
                                 </a>
                                 {% environment_action_button environment=environment button_type="pause" text="Pause" %}
