--- a/physionet-django/templates/navbar_content.html
+++ b/physionet-django/templates/navbar_content.html
@@ -28,11 +28,13 @@
 
 <ul class="navbar-nav ml-auto">
   {% if user.is_authenticated %}
-    <li class="nav-item">
-      <a id="nav_environments" class="nav-link" href="{% url 'research_environments' %}">
-        Research Environments
-      </a>
-    </li>
+    {% if enable_research_environments %}
+      <li class="nav-item">
+        <a id="nav_environments" class="nav-link" href="{% url 'research_environments' %}">
+          Research Environments
+        </a>
+      </li>
+    {% endif %}
     <li class="nav-item">
       <a id="nav_projects" class="nav-link" href="{% url 'project_home' %}">
         Projects
